<resources>
    <string name="app_name">Expenses Manager</string>
    <string name="choose_main_currency_with_colon">Choose main currency:</string>
    <string name="search">Search</string>
    <string name="manage_categories_underlined"><u>Manage categories</u></string>
    <string name="manage_secondary_currencies_underlined"><u>Manage secondary currencies</u></string>
    <string name="add_category_underlined"><u>Add category</u></string>
    <string name="number_of_expenses_underlined_with_colon"><u>Number of expenses:</u></string>
    <string name="exchange_rates_source">Source of exchange rates: \n<a href="https://exchangerate.host/">https://exchangerate.host/</a></string>
    <string name="choose_category_with_colon">Choose category:</string>
    <string name="choose_this_category">Choose this category</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="ok">Ok</string>
    <string name="try_to_reload">Try to reload</string>
    <string name="are_you_sure_you_want_to_delete_the_expense">Are you sure you want to delete the expense?</string>
    <string name="amount_with_colon">Amount:</string>
    <string name="date_with_colon">Date:</string>
    <string name="time_with_colon">Time:</string>
    <string name="category_with_colon">Category:</string>
    <string name="description_with_colon">Description:</string>
    <string name="it_seems_there_is_no_internet_connection">It seems there is no internet connection, so it\'s impossible to get currency rates!</string>
    <string name="do_not_show_this_dialog_again">Don\'t show this dialog again</string>
    <string name="got_it">Got it!</string>
    <string name="sorting">Sorting</string>
    <string name="choose_sorting_with_colon">Choose sorting:</string>
    <string name="unable_to_get_new_exchange_rates">Unable to get new exchange rates!\nIt seems there is no internet connection.</string>
    <string name="add_category_with_colon">Add category:</string>
    <string name="category_name">Category name</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="category">Category</string>
    <string name="description_optional">Description (optional)</string>
    <string name="adding_expense">Adding expense…</string>
    <string name="description">Description</string>
    <string name="choose_secondary_currencies_with_colon">Choose secondary currencies:</string>
    <string name="no_expenses_yet">No expenses yet.</string>
    <string name="total_with_colon">Total:</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="total">Total</string>
    <string name="today_with_colon">Today:</string>
    <string name="this_month_with_colon">This month:</string>
    <string name="add_expense">Add an expense</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="currency_calculator">Currency calculator</string>
    <string name="main_currency_with_colon">Main currency:</string>
    <string name="rounding_with_colon">Rounding:</string>
    <string name="total_amount_with_colon">Total amount:</string>
    <string name="expenses_by_categories_with_colon">Expenses by categories:</string>
    <string name="main_currency_changed_successfully">Main currency changed successfully.</string>
    <string name="secondary_currencies_changed_successfully">Secondary currencies changed successfully.</string>
    <string name="processing_expenses">Processing expenses…</string>
    <string name="fetching_exchange_rates">Fetching exchange rates…</string>
    <string name="recalculating_expenses">Recalculating expenses…</string>
    <string name="writing_new_exchange_rates">Writing new exchange rates…</string>
    <string name="expense_added_successfully">Expense added successfully.</string>
    <string name="enter_amount">Enter amount!</string>
    <string name="choose_category">Choose category!</string>
    <string name="amount_cannot_be_zero">Amount cannot be zero!</string>
    <string name="select_at_least_one_category">Select at least one currency!</string>
    <string name="nothing_changed">Nothing changed!</string>
    <string name="changing_currencies">Changing currencies…</string>
    <string name="this_operation_may_take_some_time">This operation may take some time because it requires recalculation of all expenses. Are you sure you want to change main currency to %s?</string>
    <string name="enter_category_name">"Enter category name!"</string>
    <string name="the_name_cannot_contain_hash_symbols">The name cannot contain hash symbols!</string>
    <string name="there_is_already_a_category_with_this_name">There is already a category with this name!</string>
    <string name="this_month_statistics">This month statistics</string>
    <string name="no_network_connection">No network connection!</string>
    <string name="this_category_has_subcategories_and_expenses">This category has subcategories and expenses.</string>
    <string name="this_category_has_subcategories">This category has subcategories.</string>
    <string name="this_category_has_expenses">This category has expenses.</string>
    <string name="are_you_sure_you_want_to_delete_category">Are you sure you want to delete "%s"?</string>
    <string name="category_deleted_successfully">Category deleted successfully.</string>
    <string name="there_is_already_a_category_with_this_color">There is already a category with this color!</string>
    <string name="category_added_successfully">Category added successfully.</string>
    <string name="loading_data">Loading data…</string>
    <string name="there_are_no_expenses_yet">There are no expenses yet.</string>
</resources>