<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background">

    <View
        android:id="@+id/view"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewChooseCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/choose_category_with_colon"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:foreground="@drawable/inner_shadow_vertical"
        android:id="@+id/recyclerViewChooseCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/buttonChooseThisCategory"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseCategory"
        tools:ignore="UnusedAttribute" />


    <com.google.android.material.button.MaterialButton
        android:textColor="@color/milky_white"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutNavigationButtons"
        android:text="@string/choose_this_category"
        android:id="@+id/buttonChooseThisCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linearLayoutNavigationButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/milky_white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:text="@string/close"
            android:textColor="@color/milky_white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>