<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background"
    android:padding="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/amount_with_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/textViewAmount"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.expenses.manager.presentation.views.ConvertibleAmountView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/textViewAmountLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="183.45" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date_with_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/textViewDate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAmountLabel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/textViewDateLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewAmount"
        tools:text="f[;[;ede" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/time_with_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/textViewTime"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDateLabel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/textViewTimeLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewDate"
        tools:text="f[;[;ededdee" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/category_with_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTime" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewCategory"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/textViewDescriptionLabel"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewCategoryLabel"
        tools:text="fjfrrrffr" />

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintBottom_toTopOf="@id/textViewDescription"
        android:id="@+id/textViewDescriptionLabel"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description_with_colon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCategory" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDescription"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDescriptionLabel"
        tools:text="fjfrrrfededefr" />


</androidx.constraintlayout.widget.ConstraintLayout>