<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewChooseMainCurrencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_secondary_currencies_with_colon"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:animateLayoutChanges="true"
        android:hint="@string/search"
        android:textColorHint="@color/blue"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseMainCurrencyLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:indeterminateTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:foreground="@drawable/inner_shadow_vertical"
        android:id="@+id/recyclerViewSelectedSymbols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewSymbols"
        app:layout_constraintHeight_max="256dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSearch"
        tools:ignore="UnusedAttribute" />

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewSymbols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewSelectedSymbols" />

    <androidx.recyclerview.widget.RecyclerView
        android:foreground="@drawable/inner_shadow_vertical"
        android:id="@+id/recyclerViewSymbols"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutNavigationButtons"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewSelectedSymbols"
        tools:ignore="UnusedAttribute" />


    <LinearLayout
        android:id="@+id/linearLayoutNavigationButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/milky_white"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:text="@string/done"
            android:textColor="@color/milky_white"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>